[package]
name = "build_deno"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_runtime = { path = "./deno/runtime/" }
tokio = { version = "1.26.0", features = ["full"] }
log = "0.4"
simple-logging = "2.0.2"
async-ffi = {version = "0.5.0", features = ["macros"]}
jni = "0.21.1"
futures = "0.3"
url = { version = "2.3.1", features = ["serde", "expose_internals"] }
# fix for cargo metadata
v8 = "0.75.0"

[lib]
path = "src/main.rs"
crate-type = ["dylib"]
